# clutterpad

./: .gitignore  AUTHORS  configure.ac
src/: Makefile.am  main.c  message.c  message.h  midi.c  midi.h  sink.c  sink.h  ui.c  ui.h
